--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta name="msapplication-TileColor" content="#1e1e1e" />
     <meta name="theme-color" content="#1e1e1e" />
 
-    <title>- moijesuisjo</title>
+    <title>Egyptian Particles</title>
     <meta
       name="description"
       content="moijesuisjo - creative front-end developer" />
@@ -53,11 +53,12 @@
         <div class="info-button">
           <img
             src="/logo.svg"
-            alt="moijesuisjo - creative front-end developer" />
+            alt="moijesuisjo - creative front-end developer"
+            width="16" />
         </div>
         <div class="info-modal">
           <div class="info-section">
-            <div class="info-title">Project Name ✨</div>
+            <div class="info-title">Egyptian Particles 🪲</div>
             <div class="info-description">Lorem ipsum dolor sit amet.</div>
           </div>
 
