--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta name="msapplication-TileColor" content="#1e1e1e" />
     <meta name="theme-color" content="#1e1e1e" />
 
-    <title>Egyptian Elegance</title>
+    <title>Egyptian Particles</title>
     <meta
       name="description"
       content="moijesuisjo - creative front-end developer" />
@@ -58,27 +58,25 @@
         </div>
         <div class="info-modal">
           <div class="info-section">
-            <div class="info-title">Egyptian Elegance 🪲</div>
-            <div class="info-description">
-              Simple Three.js project with a Pharaon statue.
-            </div>
+            <div class="info-title">Egyptian Particles 🪲</div>
+            <div class="info-description">Lorem ipsum dolor sit amet.</div>
           </div>
 
           <div class="info-section">
             <div class="info-title">Instructions</div>
             <div class="info-description">
-              Just move your mouse or tap on the screen to move light. <br />
-              Have fun and contemplate the beauty!
+              Lorem ipsum dolor sit amet.<br />
+              Have fun!
             </div>
           </div>
 
-          <!-- <div class="info-section">
+          <div class="info-section">
             <div class="info-title">References</div>
             <div class="info-description">
               Code inspired by
               <a href="/" target="_blank">Name</a>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
